# block_games

./: README.md  pyproject.toml
ressources/: life.pyxres
src/block_games.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/block_games_detroix23/: __init__.py  __main__.py  definitions.py  vectors.py
src/block_games_detroix23/blast/: __init__.py  app.py
src/block_games_detroix23/life/: __init__.py  app.py  cameras.py  interfaces.py  plates.py
