[project]
name = "block_games"
version = "0.0.1"
description = "Block games: tetris and blast."
authors = [
    { name="Detroix23", email="detroix23@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "numpy",
    "pyxel",
]

license = "CC-BY-4.0"
license-files = ["LICENSE.md"]

[project.urls]
Repository = "https://github.com/Detroix23/block_games"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
